src/objects/PF_Sprints__c.object
<CustomObject>
    <description>pForce</description>
    <fields>
        <fullName>PF_Actual_Velocity__c</fullName>
        <label>Actual Velocity</label>
        <summarizedField>PF_Stories__c.PF_Story_Point__c</summarizedField>
        <summaryFilterItems>
            <field>PF_Stories__c.PF_Story_Status__c</field>
            <operation>equals</operation>
            <value>Development Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PF_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Is_DE_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is DE Review Completed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Is_Peer_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Peer Review Completed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Number_Of_Resources__c</fullName>
        <label>Number Of Resources</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Number_of_Working_days_in_Sprint__c</fullName>
        <formula>IF(AND((5 - (CASE(MOD( PF_Planned_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD( PF_Planned_End_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ),
((( PF_Planned_End_Date__c - PF_Planned_Start_Date__c ) + 1) &lt; 7)),
((CASE(MOD( PF_Planned_End_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD( PF_Planned_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR((( PF_Planned_End_Date__c - PF_Planned_Start_Date__c ) - (CASE(MOD( PF_Planned_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD( PF_Planned_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) +
(CASE(MOD( PF_Planned_End_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Working days in Sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Percent_Complete__c</fullName>
        <formula>PF_Sum_of_Completed_Stories__c  /  IF (PF_Sum_of_All_Stories__c == 0 , 1 , PF_Sum_of_All_Stories__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PF_Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Planned_Velocity__c</fullName>
        <label>Planned Velocity</label>
        <summarizedField>PF_Stories__c.PF_Story_Point__c</summarizedField>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PF_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Projected_Velocity__c</fullName>
        <label>Projected Velocity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>PF_Release__c</referenceTo>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Slipage_in_End_date__c</fullName>
        <formula>IF(((ISBlank(PF_End_Date__c) &amp;&amp; (Today() &lt; PF_Planned_End_Date__c))  || ISBlank(PF_Planned_End_Date__c ) || (PF_Planned_End_Date__c - PF_End_Date__c &gt;= 0 )  ),  IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 30), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 30))</formula>
        <label>Slipage in End date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Slipage_in_Start_date__c</fullName>
        <formula>IF((ISBlank(PF_Start_Date__c) &amp;&amp; (Today() &lt; PF_Planned_Start_Date__c )) || PF_Planned_Start_Date__c - PF_Start_Date__c &gt;= 0, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 30), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Slipage in Start date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Sprint_Status__c</fullName>
        <label>Sprint Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Sprint_Type__c</fullName>
        <label>Sprint Type</label>
        <picklist>
            <picklistValues>
                <fullName>Custom/Mobile Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data &amp; Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Sum_of_All_Stories__c</fullName>
        <label>Total # of Stories</label>
        <summaryFilterItems>
            <field>PF_Stories__c.PF_Story_Status__c</field>
            <operation>notEqual</operation>
            <value>Out of Scope, Duplicate, Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PF_Sum_of_Completed_Stories__c</fullName>
        <label>Sum of Completed Stories</label>
        <summaryFilterItems>
            <field>PF_Stories__c.PF_Story_Status__c</field>
            <operation>equals</operation>
            <value>5-Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PF_Total_Sprint_Capacity__c</fullName>
        <formula>IF( PF_Number_of_Working_days_in_Sprint__c  &gt; 0,(PF_Number_of_Working_days_in_Sprint__c * 8 *  PF_Number_Of_Resources__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sprint Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Development_Complete__c</fullName>
        <label>Total Development Complete</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Apex_Development_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Development_in_New__c</fullName>
        <label>Total Development in New</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Apex_Development_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Development_in_Progress__c</fullName>
        <label>Total Development in Progress</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Apex_Development_Status__c</field>
            <operation>equals</operation>
            <value>Design</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PF_Stories__c.Apex_Development_Status__c</field>
            <operation>equals</operation>
            <value>Build and Review</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Func_Build_and_Review__c</fullName>
        <label>Total Func. Build and Review</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Configuration_Status_2__c</field>
            <operation>equals</operation>
            <value>Build and Review</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Func_Complete__c</fullName>
        <label>Total Func. Complete</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Configuration_Status_2__c</field>
            <operation>equals</operation>
            <value>Complete, Build Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Func_In_Design__c</fullName>
        <label>Total Func. In Design</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Configuration_Status_2__c</field>
            <operation>equals</operation>
            <value>Design</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Func_in_New__c</fullName>
        <label>Total Func. in New</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Configuration_Status_2__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Func_in_Progress__c</fullName>
        <label>Total Func. Not In Scope</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Configuration_Status_2__c</field>
            <operation>equals</operation>
            <value>Not in Scope</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Integrations_Complete__c</fullName>
        <label>Total Integrations Complete</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Integration_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Integrations_in_New__c</fullName>
        <label>Total Integrations in New</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Integration_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Integrations_in_Progress__c</fullName>
        <label>Total Integrations in Progress</label>
        <summaryFilterItems>
            <field>PF_Stories__c.Integration_Status__c</field>
            <operation>equals</operation>
            <value>Design</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PF_Stories__c.Integration_Status__c</field>
            <operation>equals</operation>
            <value>Build and Review</value>
        </summaryFilterItems>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Stories__c</fullName>
        <label>Total Stories</label>
        <summaryForeignKey>PF_Stories__c.PF_Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Workstream</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PF_Release__c</columns>
        <columns>PF_Planned_Velocity__c</columns>
        <columns>PF_Planned_Start_Date__c</columns>
        <columns>PF_Planned_End_Date__c</columns>
        <columns>PF_Start_Date__c</columns>
        <columns>PF_End_Date__c</columns>
        <columns>PF_Number_Of_Resources__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Workstream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workstreams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sprint_dates_lies_between_Release</fullName>
        <active>false</active>
        <description>Sprint Start/End dates should lie within Release Start/end dates</description>
        <errorConditionFormula>(PF_Start_Date__c &lt; PF_Release__r.PF_Planned_Start_Date__c ) ||
(PF_End_Date__c &gt; PF_Release__r.PF_Planned_End_Date__c )</errorConditionFormula>
        <errorMessage>Sprint Start/End dates should lie within Release Start/end dates</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_date_check</fullName>
        <active>true</active>
        <description>Start date cannot be greater than End date</description>
        <errorConditionFormula>PF_Start_Date__c &gt; PF_End_Date__c</errorConditionFormula>
        <errorMessage>Start date cannot be greater than End date</errorMessage>
    </validationRules>
</CustomObject>